--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 <div class="flower__leaf flower__leaf--4"></div>
                 <div class="flower__white-circle"></div>
             </div>
+            <div class="flower__light flower__light--1"></div>
+            <div class="flower__light flower__light--2"></div>
+            <div class="flower__light flower__light--3"></div>
+            <div class="flower__light flower__light--4"></div>
+            <div class="flower__light flower__light--5"></div>
+            <div class="flower__light flower__light--6"></div>
+            <div class="flower__light flower__light--7"></div>
+            <div class="flower__light flower__light--8"></div>
         </div>
         <div class="flower flower--2">
             <div class="flower__line">
@@ -40,6 +48,14 @@
                 <div class="flower__leaf flower__leaf--4"></div>
                 <div class="flower__white-circle"></div>
             </div>
+            <div class="flower__light flower__light--1"></div>
+            <div class="flower__light flower__light--2"></div>
+            <div class="flower__light flower__light--3"></div>
+            <div class="flower__light flower__light--4"></div>
+            <div class="flower__light flower__light--5"></div>
+            <div class="flower__light flower__light--6"></div>
+            <div class="flower__light flower__light--7"></div>
+            <div class="flower__light flower__light--8"></div>
         </div>
         <div class="flower flower--3">
             <div class="flower__line">
@@ -55,6 +71,14 @@
                 <div class="flower__leaf flower__leaf--4"></div>
                 <div class="flower__white-circle"></div>
             </div>
+            <div class="flower__light flower__light--1"></div>
+            <div class="flower__light flower__light--2"></div>
+            <div class="flower__light flower__light--3"></div>
+            <div class="flower__light flower__light--4"></div>
+            <div class="flower__light flower__light--5"></div>
+            <div class="flower__light flower__light--6"></div>
+            <div class="flower__light flower__light--7"></div>
+            <div class="flower__light flower__light--8"></div>
         </div>
     </div>
     <div id="typewriter-text"></div>
